{
  "version": 4,
  "terraform_version": "1.4.0",
  "serial": 72,
  "lineage": "8150b05c-2c0b-cb1a-f231-2dc38ce47772",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cc2_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkInterfaces/cc2-network-interface",
            "internal_domain_name_suffix": "o0genptvbn0evnlbleoisbspcf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "cc2-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/publicIPAddresses/cc2-public-ip",
                "subnet_id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/virtualNetworks/cc2-virtual-network/subnets/cc2-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-33-C6-ED",
            "name": "cc2-network-interface",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "cc2-resource-group",
            "virtual_machine_id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Compute/virtualMachines/cc2-virtual-machine"
          },
          "dependencies": [
            "azurerm_public_ip.cc2_public_ip",
            "azurerm_resource_group.cc2_rg",
            "azurerm_subnet.cc2_subnet",
            "azurerm_virtual_network.cc2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "cc2_nic_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkInterfaces/cc2-network-interface|/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkSecurityGroups/cc2-nsg",
            "network_interface_id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkInterfaces/cc2-network-interface",
            "network_security_group_id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkSecurityGroups/cc2-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.cc2_nic",
            "azurerm_network_security_group.cc2_nsg",
            "azurerm_public_ip.cc2_public_ip",
            "azurerm_resource_group.cc2_rg",
            "azurerm_subnet.cc2_subnet",
            "azurerm_virtual_network.cc2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cc2_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkSecurityGroups/cc2-nsg",
            "location": "eastus",
            "name": "cc2-nsg",
            "resource_group_name": "cc2-resource-group",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "cc2-allow-ssh",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "94.16.106.239",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "cc2-allow-https",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "94.16.106.239",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "cc2-allow-http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "94.16.106.239",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.cc2_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "cc2_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkSecurityGroups/cc2-nsg/securityRules/cc2-allow-http",
            "name": "cc2-allow-http",
            "network_security_group_name": "cc2-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "cc2-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.cc2_nsg",
            "azurerm_resource_group.cc2_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "cc2_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkSecurityGroups/cc2-nsg/securityRules/cc2-allow-https",
            "name": "cc2-allow-https",
            "network_security_group_name": "cc2-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "cc2-resource-group",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.cc2_nsg",
            "azurerm_resource_group.cc2_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "cc2_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/networkSecurityGroups/cc2-nsg/securityRules/cc2-allow-ssh",
            "name": "cc2-allow-ssh",
            "network_security_group_name": "cc2-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "cc2-resource-group",
            "source_address_prefix": "94.16.106.239",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.cc2_nsg",
            "azurerm_resource_group.cc2_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "cc2_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/publicIPAddresses/cc2-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.51.181.62",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "cc2-public-ip",
            "resource_group_name": "cc2-resource-group",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.cc2_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cc2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/virtualNetworks/cc2-virtual-network/subnets/cc2-subnet",
            "name": "cc2-subnet",
            "resource_group_name": "cc2-resource-group",
            "virtual_network_name": "cc2-virtual-network"
          },
          "dependencies": [
            "azurerm_resource_group.cc2_rg",
            "azurerm_virtual_network.cc2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "cc2_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "be468c76-0b75-4a74-b561-591c89064f15",
            "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/virtualNetworks/cc2-virtual-network",
            "location": "eastus",
            "name": "cc2-virtual-network",
            "resource_group_name": "cc2-resource-group",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/dba3b5be-59a2-4bf7-9dce-7f36eee0fbce/resourceGroups/cc2-resource-group/providers/Microsoft.Network/virtualNetworks/cc2-virtual-network/subnets/cc2-subnet",
                "name": "cc2-subnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.cc2_rg"
          ]
        }
      ]
    }
  ]
}